k8s/backend.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: notex-backend 
  labels:
    app: notex-bcknd
spec: 
  replicas: 2 
  selector: 
    matchLabels:
      app: notex-bcknd 
  template:
    metadata:
      labels: 
        app: notex-bcknd 
    spec: 
      containers: 
        - name: laughing-davinci
          image: rn20170986/backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 2017
