k8s/frontend.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: notex-frontend 
  labels:
    app: notex-frntend 
spec: 
  replicas: 2 
  selector:
    matchLabels:
      app: notex-frntend
  template:
    metadata: 
      labels: 
        app: notex-frntend
    spec:
      containers:
        - name: gifted-wright
          image: rn20170986/frontend:latest
          imagePullPolicy: Always 
          ports: 
            - containerPort: 3000
