k8s/backend.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notex-backend-service
spec:
  type: ClusterIP # Changed from ClusterIP
  selector:
    app: notex-bcknd
  ports:
    - port: 2017
      targetPort: 2017
