k8s/frontend.service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: notex-frontend-service 
spec: 
  type: ClusterIP
  selector:
    app: notex-frntend 
  ports: 
   - port: 3000
     targetPort: 3000
